# comrade-bot

./: .eslintrc.cjs  .eslintrc.json  .example.env  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  bot_client.js  client.js  eslint.config.js  jsconfig.json  logger.js  main.js  package-lock.json  package.json  pyproject.toml  register.js  server.js
.github/workflows/: main.yml  node.js.yml
Discord/: client.js  init.js  init_Discord.js
Discord/commands/: UwUify.js  dadjoke.js  guildinfo.js  info.js  lengthen.js  meme.js  ping.js  rss-feed.js  rss.js  userinfo.js
Telegram/: init_Telegram.js
commands/: UwUify.js  fullhunt.js  guildinfo.js  lengthen.js  ping.js  reddit.js  rss-feed.js  userinfo.js
comrade-bot/: __main__.py  client.py  util.py
comrade-bot/commands/: dev.py  general.py  info.py  rss.py
comrade-bot/rss/: core.py  schema.py
functions/: feed_parser.js  get_dadjoke.js  get_fullhunt.js  get_reddit.js  multi.js  reddit.js  util.js
legacy/: fullhunt.js  get_fullhunt.js  workflow.yml
models/: RSSObj.js
server/: server.js
submodules/: feed-parser.js  feedReader.js  feed_parser.js  init.js  mongoDB.js  server.js
web/: about.md  contact.html  index.html  style.css
web/docs/: about.md
